# cailab41

./: .gitignore  Cargo.toml  README.md  peek.cc  run_cpp.sh
cpp/: CMakeLists.txt  avx.cc  avx.hh  avx2.cc  avx2.hh  main.cc  misc.hh  mmx.cc  mmx.hh  plain.cc  plain.hh  sse2.cc  sse2.hh  test
